Atualizando feedback ao usuario

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <div class="form-row">
                 <div class="form-col">
                     <a id="salvar">Salvar Registro</a>
+                    <a id="edit" style="display: none;">Editar Registro</a>
                 </div>
             </div>
 
